[gd_scene load_steps=11 format=3 uid="uid://cu7dqnxar2vcm"]

[ext_resource type="Script" path="res://ui/ingame_menu.gd" id="1_iru8w"]
[ext_resource type="Texture2D" uid="uid://0esun8vk0q22" path="res://assets/art/BackgroundBoardNoB.png" id="1_nfdg2"]
[ext_resource type="Texture2D" uid="uid://b1tgm44fknjxm" path="res://assets/art/BetterButton.png" id="2_ge33f"]
[ext_resource type="Theme" path="res://ui/MainMenuTheme.tres" id="3_gc886"]
[ext_resource type="AudioStream" uid="uid://cnqoklosw7w1u" path="res://assets/music/flotten_v1.mp3" id="5_wmwyq"]
[ext_resource type="AudioStream" uid="uid://d31o2oggm4e4y" path="res://assets/music/flotten_v2.mp3" id="6_ugjdb"]
[ext_resource type="AudioStream" uid="uid://c4wswsiv2tugl" path="res://assets/music/flotten_v3.mp3" id="7_klkcs"]
[ext_resource type="AudioStream" uid="uid://b0fn1jv408syw" path="res://assets/music/raft_v1.mp3" id="8_yog7s"]
[ext_resource type="AudioStream" uid="uid://dbnbq8tygl6mg" path="res://assets/music/raft_v2.mp3" id="9_vegmj"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_eskpd"]
streams_count = 6
stream_0/stream = ExtResource("5_wmwyq")
stream_1/stream = ExtResource("6_ugjdb")
stream_2/stream = ExtResource("7_klkcs")
stream_3/stream = ExtResource("8_yog7s")
stream_4/stream = ExtResource("9_vegmj")
stream_5/stream = ExtResource("9_vegmj")

[node name="Menu_CanvasLayer" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_iru8w")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.5
offset_top = -540.0
offset_right = 314.5
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nfdg2")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -304.0
offset_right = 200.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons_VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume_TextureButton" type="TextureButton" parent="TextureRect/MarginContainer/Buttons_VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_ge33f")
ignore_texture_size = true
stretch_mode = 5

[node name="Resume_Label" type="Label" parent="TextureRect/MarginContainer/Buttons_VBoxContainer/Resume_TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.5
offset_right = 24.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_gc886")
text = "Resume"

[node name="MuteMusic_TextureButton2" type="TextureButton" parent="TextureRect/MarginContainer/Buttons_VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_ge33f")
ignore_texture_size = true
stretch_mode = 5

[node name="MuteMusic_Label" type="Label" parent="TextureRect/MarginContainer/Buttons_VBoxContainer/MuteMusic_TextureButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_gc886")
text = "Mute Music"

[node name="MainMenu_TextureButton3" type="TextureButton" parent="TextureRect/MarginContainer/Buttons_VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_ge33f")
ignore_texture_size = true
stretch_mode = 5

[node name="MainMenu_Label" type="Label" parent="TextureRect/MarginContainer/Buttons_VBoxContainer/MainMenu_TextureButton3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_gc886")
text = "Main Menu"

[node name="Music_AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_eskpd")
autoplay = true

[connection signal="pressed" from="TextureRect/MarginContainer/Buttons_VBoxContainer/Resume_TextureButton" to="." method="_on_resume_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/Buttons_VBoxContainer/MuteMusic_TextureButton2" to="." method="_on_mute_music_texture_button_2_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/Buttons_VBoxContainer/MainMenu_TextureButton3" to="." method="_on_main_menu_texture_button_3_pressed"]
